<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="55dp">
    <LinearLayout
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/return_button"
            android:layout_width="41dp"
            android:layout_height="41dp"
            android:src="?attr/actionModeCloseDrawable" />
        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:text="@string/add_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/new_book_title"
            android:hint="@string/title"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <requestFocus/>
        </EditText>
        <EditText
            android:id="@+id/new_book_price"
            android:hint="@string/price"
            android:inputType="date"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/new_book_subtitle"
            android:inputType="textShortMessage"
            android:hint="@string/subtitle"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_marginTop="24dp"
            android:padding="24dp"
            android:id="@+id/add_book_button"
            android:text="@string/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>